--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "type": "module",
     "main": "src/server.mjs",
     "scripts": {
-        "dev": "node src/server.mjs"
+        "start": "node ./src/server.mjs"
     },
     "dependencies": {
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.0.3",
         "ejs": "^3.1.10",
+        "ejs-mate": "^4.0.0",
         "express": "^4.18.2",
         "express-ejs-layouts": "^2.5.1",
         "express-rate-limit": "^6.7.0",
