--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "express": "^4.18.2",
         "express-ejs-layouts": "^2.5.1",
         "express-rate-limit": "^6.7.0",
+        "express-session": "^1.18.1",
         "helmet": "^7.0.0",
         "morgan": "^1.10.0",
         "uuid": "^11.1.0"
